# Elixir

./: README.md
elixir-master/elixir-master/: README.md  index.html  package.json
elixir-master/elixir-master/src/: app.tsx  main.tsx  vite-env.d.ts
elixir-master/elixir-master/src-tauri/: Cargo.toml  tauri.conf.json
elixir-master/elixir-master/src-tauri/icons/: icon.icns
elixir-master/elixir-master/src-tauri/src/: download.rs  download2.rs  main.rs  process.rs
elixir-master/elixir-master/src/api/: auth.ts  builds.ts  developer.ts  endpoints.ts  files.ts  friends.ts  health.ts  news.ts  storefront.ts
elixir-master/elixir-master/src/core/: button.tsx  donate.tsx  downloadProgress.tsx  input.tsx  loading.tsx  modals.tsx  route.tsx
elixir-master/elixir-master/src/frame/: frame.tsx  friends.tsx  menu.tsx  toaster.tsx
elixir-master/elixir-master/src/help/: developer.ts  download.ts  library.ts  modals.ts  random.ts  react.ts
elixir-master/elixir-master/src/pages/: developer.tsx  download.tsx  health.tsx  home.tsx  library.tsx  login.tsx  settings.tsx  storefront.tsx
elixir-master/elixir-master/src/state/: auth.ts  builds.ts  friends.ts  health.ts  loading.ts  modal.ts  news.ts  path.ts  storefront.ts  toaster.ts
elixir-master/elixir-master/src/static/: config.ts  playlist.ts
elixir-master/elixir-master/src/styles/: core.css  frame.css  friends.css  main.css  menu.css  modals.css  toaster.css
elixir-master/elixir-master/src/styles/pages/: developer.css  download.css  health.css  home.css  library.css  login.css  settings.css
